deployments/rancher-dashboard/rancher-dashboard-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rancher-dashboard-middleware
  namespace: cattle-system
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Port: "443"
    customResponseHeaders:
      Strict-Transport-Security: "max-age=63072000; includeSubDomains; preload"
      X-Content-Type-Options: "nosniff"
      X-Frame-Options: "SAMEORIGIN"
      X-XSS-Protection: "1; mode=block"
      Content-Security-Policy: "upgrade-insecure-requests"
    sslRedirect: true
    stsIncludeSubdomains: true
    stsPreload: true
    forceSTSHeader: true
