deployments/rancher-dashboard/rancher-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-dashboard-service
  namespace: cattle-system
spec:
  type: LoadBalancer
  loadBalancerIP: ${load_balancer_ip}
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: port-80
  selector:
    app: rancher
